# go-plugin

./: .prototools  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: config.rs  lib.rs  proto.rs  version.rs
tests/: download_test.rs  globals_test.rs  hooks_test.rs  metadata_test.rs  shims_test.rs  versions_test.rs
tests/snapshots/: shims_test__creates_global_shims.snap  shims_test__creates_shims.snap
